Added chocolatey and mono

--- a/tasks/base.yml
+++ b/tasks/base.yml
@@ -3,6 +3,8 @@
 - name: install packages
   win_chocolatey: name={{ item }} state=present
   with_items:
+    - chocolatey
     - firefox
     - googlechrome
     - 7zip.install
+    - lastpass
